--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body class="bg-secondary">
-    <div class="container border mb-4 mt-4  rounded-4 shadow bg-white">
+  <body>
+    <div class="container mb-4 mt-4 rounded-4 bg-white " >
         <!-- menu -->
         <nav class="d-md-flex p-1">
             <div class="me-auto my-auto">
@@ -15,14 +15,115 @@
             </div>
             <div class="ms-auto my-auto">
                 <ul class="list-inline m-0">
-                    <li class="list-inline-item mx-md-3"><a href="" class="text-decoration-none text-dark fw-bold">Produk Kami</a></li>
-                    <li class="list-inline-item mx-md-3"><a href="" class="text-decoration-none text-dark fw-bold">Tentang Kami</a></li>
-                    <li class="list-inline-item mx-md-3"><a href="" class="text-decoration-none text-dark fw-bold">Cara Order</a></li>
+                    <li class="list-inline-item mx-md-3"><a href="#produkKami" class="text-decoration-none text-dark fw-bold">Produk Kami</a></li>
+                    <li class="list-inline-item mx-md-3"><a href="#tentangKami" class="text-decoration-none text-dark fw-bold">Tentang Kami</a></li>
+                    <li class="list-inline-item mx-md-3"><a href="#order" class="text-decoration-none text-dark fw-bold">Cara Order</a></li>
                 </ul>
             </div>
-            
         </nav>
+        <!-- banner -->
+        <div class="px-4" mb-4>
+          <img class="w-100 rounded-4 mb-4" src="images/banner.png" alt="">
+          <h3 class="text-center">Colection</h3>
+          <div class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+        </div>
+        <!-- catalogue -->
+        <div id="produkKami" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 gy-5 p-5 ">
+          <div class="col mb-4">
+            <div class="card shadow">
+              <img class="card-img-top" src="images/buku1.jpg" alt="Atomic Habits">
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              </div>  
+              <div class="card-footer d-md-flex">
+                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
+                <span class="ms-auto d-block">Rp. 50.000.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card shadow">
+              <img class="card-img-top" src="images/buku2.jpg" alt="Deep Work">
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              </div>
+              <div class="card-footer d-md-flex">
+                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
+                <span class="ms-auto d-block">Rp. 50.000.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card shadow">
+              <img class="card-img-top" src="images/buku3.jpg" alt="Making Learning Whole">
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              </div>
+              <div class="card-footer d-md-flex">
+                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
+                <span class="ms-auto d-block">Rp. 50.000.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card shadow">
+              <img class="card-img-top" src="images/buku4.jpg" alt="Range">
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              </div>
+              <div class="card-footer d-md-flex">
+                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
+                <span class="ms-auto d-block">Rp. 50.000.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card shadow">
+              <img class="card-img-top" src="images/buku5.jpg" alt="Range">
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              </div>
+              <div class="card-footer d-md-flex">
+                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
+                <span class="ms-auto d-block">Rp. 50.000.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card shadow">
+              <img class="card-img-top" src="images/buku6.jpg" alt="Range">
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              </div>
+              <div class="card-footer d-md-flex">
+                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
+                <span class="ms-auto d-block">Rp. 50.000.00</span>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- tentang kami -->
+    <div id="tentangKami" class="bg-secondary text-center p-4">
+      <div class="mx-auto w-50 ">
+        <h3 class="text-light">Tentang Kami</h3>
+        <p class="text-light text-center">
+          <img class="  me-3 mb-3" src="images/about-us.png" alt="" align="left" style="width: 100px; height: auto;">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fugit est reiciendis impedit temporibus voluptatem quos. Eos, ratione. Quidem alias perspiciatis inventore aut adipisci voluptatem eos distinctio modi vitae molestias.
+        </p>
+      </div>
+    </div>
+    <!-- cara order -->
+    <div id="order" class="bg-secondary text-center p-4">
+      <div class="mx-auto w-50 ">
+        <h3 class="text-dark">Tentang Kami</h3>
+        <p class="text-dark text-center">
+          <img class="  me-3 mb-3" src="images/order.png" alt="" align="right" style="width: 100px; height: auto;">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fugit est reiciendis impedit temporibus voluptatem quos. Eos, ratione. Quidem alias perspiciatis inventore aut adipisci voluptatem eos distinctio modi vitae molestias.
+        </p>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </body>
 </html>
