--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <!-- banner -->
         <div class="px-4" mb-4>
           <img class="w-100 rounded-4 mb-4" src="images/banner.png" alt="">
-          <h3 class="text-center">Colection</h3>
+          <h3 id="produkKami" class="text-center">Colection</h3>
           <div class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
         </div>
         <!-- catalogue -->
-        <div id="produkKami" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 gy-5 p-5 ">
+        <div  class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 gy-5 p-5 ">
           <div class="col mb-4">
             <div class="card shadow">
               <img class="card-img-top" src="images/buku1.jpg" alt="Atomic Habits">
@@ -36,9 +36,10 @@
                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
               </div>  
               <div class="card-footer d-md-flex">
-                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
-                <span class="ms-auto d-block">Rp. 50.000.00</span>
+                <a class=" btn btn-sm d-block btn-primary btnDetail">Detail</a>
+                <span class="ms-auto d-block harga">Rp. 50.000.00</span>
               </div>
+              <div class="d-none deskripsi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reprehenderit sequi perspiciatis reiciendis? Nihil nostrum eos minus, nesciunt sapiente molestiae aliquid non iusto dolorum, debitis cum doloribus corrupti porro consectetur.</div>
             </div>
           </div>
           <div class="col mb-4">
@@ -48,9 +49,10 @@
                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
               </div>
               <div class="card-footer d-md-flex">
-                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
-                <span class="ms-auto d-block">Rp. 50.000.00</span>
+                <a class=" btn btn-sm d-block btn-primary btnDetail">Detail</a>
+                <span class="ms-auto d-block harga">Rp. 50.000.00</span>
               </div>
+              <div class="d-none deskripsi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reprehenderit sequi perspiciatis reiciendis? Nihil nostrum eos minus, nesciunt sapiente molestiae aliquid non iusto dolorum, debitis cum doloribus corrupti porro consectetur.</div>
             </div>
           </div>
           <div class="col mb-4">
@@ -60,9 +62,10 @@
                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
               </div>
               <div class="card-footer d-md-flex">
-                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
-                <span class="ms-auto d-block">Rp. 50.000.00</span>
+                <a class=" btn btn-sm d-block btn-primary btnDetail">Detail</a>
+                <span class="ms-auto d-block harga">Rp. 50.000.00</span>
               </div>
+               <div class="d-none deskripsi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reprehenderit sequi perspiciatis reiciendis? Nihil nostrum eos minus, nesciunt sapiente molestiae aliquid non iusto dolorum, debitis cum doloribus corrupti porro consectetur.</div>
             </div>
           </div>
           <div class="col mb-4">
@@ -72,9 +75,10 @@
                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
               </div>
               <div class="card-footer d-md-flex">
-                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
-                <span class="ms-auto d-block">Rp. 50.000.00</span>
+                <a class=" btn btn-sm d-block btn-primary btnDetail">Detail</a>
+                <span class="ms-auto d-block harga">Rp. 50.000.00</span>
               </div>
+               <div class="d-none deskripsi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reprehenderit sequi perspiciatis reiciendis? Nihil nostrum eos minus, nesciunt sapiente molestiae aliquid non iusto dolorum, debitis cum doloribus corrupti porro consectetur.</div>
             </div>
           </div>
           <div class="col mb-4">
@@ -84,9 +88,10 @@
                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
               </div>
               <div class="card-footer d-md-flex">
-                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
-                <span class="ms-auto d-block">Rp. 50.000.00</span>
+                <a class=" btn btn-sm d-block btn-primary btnDetail">Detail</a>
+                <span class="ms-auto d-block harga">Rp. 50.000.00</span>
               </div>
+               <div class="d-none deskripsi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reprehenderit sequi perspiciatis reiciendis? Nihil nostrum eos minus, nesciunt sapiente molestiae aliquid non iusto dolorum, debitis cum doloribus corrupti porro consectetur.</div>
             </div>
           </div>
           <div class="col mb-4">
@@ -96,9 +101,10 @@
                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
               </div>
               <div class="card-footer d-md-flex">
-                <a href="#" class=" btn btn-sm d-block btn-primary">Detail</a>
-                <span class="ms-auto d-block">Rp. 50.000.00</span>
+                <a class=" btn btn-sm d-block btn-primary btnDetail">Detail</a>
+                <span class="ms-auto d-block harga">Rp. 50.000.00</span>
               </div>
+               <div class="d-none deskripsi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reprehenderit sequi perspiciatis reiciendis? Nihil nostrum eos minus, nesciunt sapiente molestiae aliquid non iusto dolorum, debitis cum doloribus corrupti porro consectetur.</div>
             </div>
           </div>
         </div>
@@ -118,9 +124,38 @@
       <div class="mx-auto w-50 ">
         <h3 class="text-dark">Tentang Kami</h3>
         <p class="text-dark text-center">
-          <img class="  me-3 mb-3" src="images/order.png" alt="" align="right" style="width: 100px; height: auto;">
+          <img class="  ms-3 mb-3" src="images/order.png" alt="" align="right" style="width: 100px; height: auto;">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fugit est reiciendis impedit temporibus voluptatem quos. Eos, ratione. Quidem alias perspiciatis inventore aut adipisci voluptatem eos distinctio modi vitae molestias.
         </p>
+      </div>
+    </div>
+    <!-- copyright -->
+    <div class="text-center bg-secondary-subtle">&copy; 2023 Book-Store </div>
+    <!-- modal -->
+    <button type="button" class="btn btn-primary d-none btnModal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Launch demo modal
+    </button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5 modalTitle" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body row p-4">
+            <div class="col-md-6 col-12 modalImage"></div>
+            <div class="col-md-6 col-12 ">
+              <div class="modalDeskripsi" style="height: 90% ;"></div>
+              <div class=" d-md-flex  " >
+                <a class=" btn btn-sm d-block btn-danger btnBuy" href="" target="_blank">Buy</a>
+                <span class="ms-auto d-block modalHarga"></span>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
